--- a/res/layout/trip_edit.xml
+++ b/res/layout/trip_edit.xml
@@ -3,27 +3,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
 
     <TableRow
         android:id="@+id/tableRow1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
       <TextView
           android:id="@+id/fromLabel"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/trip_from"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/fromText"
           android:layout_weight="1"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:lines="1" >
         <requestFocus />
@@ -32,21 +34,18 @@
 
     <TableRow
         android:id="@+id/tableRow2"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
       <TextView
           android:id="@+id/toLabel"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/trip_to"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/toText"
           android:layout_weight="1"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:lines="1" >
         <requestFocus />
@@ -55,19 +54,17 @@
 
     <TableRow
         android:id="@+id/tableRow3"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
+
       <TextView
           android:id="@+id/legNameLabel"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/trip_name"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/legNameText"
-          android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:lines="1" >
@@ -78,34 +75,48 @@
 
     <TableRow
         android:id="@+id/tableRow4"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
+
+      <TextView
+          android:id="@+id/startTimeLabel"
+          android:layout_height="wrap_content"
+          android:lines="1"
+          android:text="@string/start_time"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/startTime"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:layout_weight="0.5"
           android:clickable="false"
           android:focusable="false"
           android:focusableInTouchMode="false"
-          android:hint="@string/first_entry"
           android:linksClickable="false"
           android:longClickable="false"
           android:lines="1" >
 
         <requestFocus />
       </EditText>
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tableRow4b"
+        android:layout_height="wrap_content" >
+
+      <TextView
+          android:id="@+id/endTimeLabel"
+          android:layout_height="wrap_content"
+          android:lines="1"
+          android:text="@string/end_time"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/endTime"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:layout_weight="0.5"
           android:clickable="false"
           android:focusable="false"
           android:focusableInTouchMode="false"
-          android:hint="@string/last_entry"
           android:linksClickable="false"
           android:longClickable="false"
           android:lines="1" >
@@ -116,20 +127,17 @@
 
     <TableRow
         android:id="@+id/tableRow5"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
       <TextView
           android:id="@+id/totalDistanceLabel"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/total_distance"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/totalDistanceText"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:clickable="false"
@@ -145,20 +153,18 @@
 
     <TableRow
         android:id="@+id/tableRow6"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
+
       <TextView
           android:id="@+id/totalSailingTime"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/total_sailing_time"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/totalSailingTimeText"
           android:layout_weight="1"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:clickable="false"
           android:focusable="false"
@@ -172,20 +178,18 @@
 
     <TableRow
         android:id="@+id/tableRow7"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
+
       <TextView
           android:id="@+id/totalEngineTime"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:lines="1"
           android:text="@string/total_engine_time"
           android:textAppearance="?android:attr/textAppearanceMedium" />
 
       <EditText
           android:id="@+id/totalEngineTimeText"
           android:layout_weight="1"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:clickable="false"
           android:focusable="false"
@@ -196,34 +200,34 @@
         <requestFocus />
       </EditText>
     </TableRow>
+  </TableLayout>
 
-    <TableRow
-        android:id="@+id/tableRow8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+  <LinearLayout
+      android:id="@+id/buttonsAtBottom"
+      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:orientation="horizontal">
 
       <Button
           android:id="@+id/saveTripButton"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:layout_width="wrap_content"
+          android:layout_weight="0.3"
           android:text="@string/save" />
 
       <Button
           android:id="@+id/deleteThisButton"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:layout_width="wrap_content"
+          android:layout_weight="0.3"
           android:text="@string/delete_this_trip" />
 
       <Button
           android:id="@+id/selectThisButton"
-          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
+          android:layout_width="wrap_content"
+          android:layout_weight="0.3"
           android:text="@string/select_this_trip" />
-
-    </TableRow>
-  </TableLayout>
-
+  </LinearLayout>
+  </LinearLayout>
 </ScrollView>
